// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for: Counter Component Snaopshot test 1`] = `
<DocumentFragment>
  <div>
    <button
      data-testid="counter_decrease_button"
    >
      -
    </button>
    <strong
      data-testid="counter_value_text"
      style="color: red;"
    >
      0
    </strong>
    <button
      data-testid="counter_increase_button"
    >
      +
    </button>
    <p>
      Current time: 
    </p>
  </div>
</DocumentFragment>
`;

exports[`Unit test for: Counter Component Snaopshot test after decreasing the value 1`] = `
<DocumentFragment>
  <div>
    <button
      data-testid="counter_decrease_button"
    >
      -
    </button>
    <strong
      data-testid="counter_value_text"
      style="color: blue;"
    >
      -1
    </strong>
    <button
      data-testid="counter_increase_button"
    >
      +
    </button>
    <p>
      Current time: 
    </p>
  </div>
</DocumentFragment>
`;

exports[`Unit test for: Counter Component Snaopshot test after increasing the value 1`] = `
<DocumentFragment>
  <div>
    <button
      data-testid="counter_decrease_button"
    >
      -
    </button>
    <strong
      data-testid="counter_value_text"
      style="color: blue;"
    >
      1
    </strong>
    <button
      data-testid="counter_increase_button"
    >
      +
    </button>
    <p>
      Current time: 
    </p>
  </div>
</DocumentFragment>
`;
